[tool.poetry]
name = "cncjs-py-pendant"
version = "0.1.0"
description = "CNCjs pendant written in Python"
authors = ["Raphael Menderico <menderico@gmail.com>"]
license = "MIT"

packages = [
    { include = "*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
python-socketio = {version = "^4", extras = ["asyncio_client"]}
PyJWT = "^2"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
